--- a/index.html
+++ b/index.html
@@ -33,14 +33,9 @@
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Hello World!" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://glitch-hello-website.glitch.me/" />
     <meta
       property="og:description"
       content="A simple website, built with Glitch. Remix it to get your own."
-    />
-    <meta
-      property="og:image"
-      content="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2Fhello-website-social.png?v=1616712748147"
     />
     <meta name="twitter:card" content="summary" />
 
@@ -59,7 +54,7 @@
         <p>
           <img
             id="gen-img"
-            src="https://cdn.glitch.global/3e847397-f3aa-4e17-8bcc-8f4d3321b749/flwr1.jpeg?v=1652397689595"
+            src="images/flwr1.jpeg"
             class="illustration"
           />
         </p>
@@ -73,18 +68,7 @@
     </div>
     <!-- The footer holds our remix button — you can use it for structure or cut it out ✂ -->
     <footer class="footer">
-      <div class="links"></div>
-      <a
-        class="btn--remix"
-        target="_top"
-        href="https://glitch.com/edit/#!/remix/glitch-hello-website"
-      >
-        <img
-          src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
-          alt=""
-        />
-        Remix on Glitch
-      </a>
+
     </footer>
   </body>
 </html>
