--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       You can write text in a comment and the content won't be visible in the page
     -->
 
-    <title>Hello World!</title>
+    <title>Random Flowers</title>
 
     <!-- Meta tags for SEO and social sharing -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -26,14 +26,14 @@
     />
     <meta
       name="description"
-      content="A simple website, built with Glitch. Remix it to get your own."
+      content="A simple flower randomizer"
     />
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Hello World!" />
     <meta property="og:type" content="article" />
     <meta
       property="og:description"
-      content="A simple website, built with Glitch. Remix it to get your own."
+      content="A simple flower randomizer."
     />
     <meta name="twitter:card" content="summary" />
 
